--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Create secrets.json
       run: |
-        echo '{"SECRET_KEY": "${{ secrets.SECRET_KEY }}"}' > aiServer/aiServer/secrets.json
+        echo '{"SECRET_KEY": "${{ secrets.SECRET_KEY }}"}' > aiServer/secrets.json
 
     - name: Run Tests
       run: |
