--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install setuptools 
         pip install django djangorestframework drf-yasg
 
     - name: Create secrets.json
