--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -40,16 +40,16 @@ jobs:
         echo "${{ secrets.EC2_KEY }}" > key.pem
         chmod 400 key.pem
         scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer ubuntu@$EC2_HOST:/home/ubuntu/
+    
 
     - name: Deploy to EC2
       run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@$EC2_HOST << 'EOF'
-          cd /home/ubuntu/aiServer
-          python3 -m venv venv
-          source venv/bin/activate
-          python -m pip install --upgrade pip
-          pip install django djangorestframework drf-yasg
-          nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application &
-          sudo service nginx restart
-        EOF
-        rm key.pem
+        ssh -o StrictHostKeyChecking=no -i key.pem -t ubuntu@$EC2_HOST << 'EOF'
+        cd /home/ubuntu/aiServer
+        python3 -m venv venv
+        source venv/bin/activate
+        python -m pip install --upgrade pip
+        pip install django djangorestframework drf-yasg
+        nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application &
+        sudo service nginx restart
+      EOF
