--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -31,22 +31,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Debug Environment Variables
-      run: |
-        echo "EC2_HOST: $EC2_HOST"
-        echo "EC2_USER: $EC2_USER"
-        echo "$EC2_KEY" > key.pem
-        chmod 400 key.pem
-        ls -al key.pem
-
     - name: Upload Code to EC2
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
         EC2_USER: ubuntu
         EC2_KEY: ${{ secrets.EC2_KEY }}
       run: |
+        echo "${{ secrets.EC2_KEY }}" > key.pem
+        chmod 400 key.pem
         scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer ubuntu@$EC2_HOST:/home/ubuntu/
-
+    
     - name: Deploy to EC2
       run: |
         ssh -o StrictHostKeyChecking=no -i key.pem -t ubuntu@$EC2_HOST << 'EOF'
@@ -58,6 +52,4 @@ jobs:
         nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application &
         sudo service nginx restart
         EOF
-
-    - name: Clean up
-      run: rm key.pem
+        rm key.pem
