--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -31,15 +31,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-
     - name: Upload and Deploy Code to EC2
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
         EC2_USER: ubuntu
         EC2_KEY: ${{ secrets.EC2_KEY }}
+        SECRET: ${{ secrets.SECRETS }}
       run: |
         echo "${{ secrets.EC2_KEY }}" > key.pem
         chmod 400 key.pem
+
+        # secrets.json 파일 생성
+        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << 'EOF'
+          echo '{"SECRET_KEY": "'"${SECRETS}"'"}' > /home/ubuntu/aiServer/secrets.json
+        EOF
         
         # 코드 업로드
         scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer $EC2_USER@$EC2_HOST:/home/ubuntu/
@@ -50,7 +55,7 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           python -m pip install --upgrade pip
-          pip install django djangorestframework drf-yasg
+          pip install django djangorestframework drf-yasg gunicorn
           nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application &
           sudo service nginx restart
         EOF
