--- a/.github/workflows/django_CI.yml
+++ b/.github/workflows/django_CI.yml
@@ -55,7 +55,7 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           python -m pip install --upgrade pip
-          pip install setuptools django djangorestframework drf-yasg gunicorn
+          pip install setuptools corsheaders django djangorestframework drf-yasg gunicorn
           nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application &
           sudo service nginx restart
         EOF
