--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -40,9 +40,12 @@ jobs:
       run: |
         echo "${{ secrets.EC2_KEY }}" > key.pem
         chmod 400 key.pem
-        
-        # secrets.json 파일 생성
-        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST <<- 'EOF'
+
+        # 서버에서 디렉토리 생성 여부 확인 및 생성
+        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
+          if [ ! -d "/home/ubuntu/aiServer" ]; then
+            mkdir -p /home/ubuntu/aiServer
+          fi
           echo '{"SECRET_KEY": "'"${SECRET}"'"}' > /home/ubuntu/aiServer/secrets.json
         EOF
         
@@ -50,7 +53,7 @@ jobs:
         scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer $EC2_USER@$EC2_HOST:/home/ubuntu/
         
         # 서버에 접속하여 작업 수행
-        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST <<- 'EOF'
+        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
           cd /home/ubuntu/aiServer || exit 1
           python3 -m venv venv
           source venv/bin/activate
