--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -23,7 +23,7 @@ jobs:
         pip install django djangorestframework drf-yasg
       working-directory: aiServer
 
-  deploy:
+  upload:
     runs-on: ubuntu-latest
     needs: build
 
@@ -31,7 +31,37 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Upload and Deploy Code to EC2
+    - name: Upload Code to EC2
+      env:
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+        EC2_USER: ubuntu
+        EC2_KEY: ${{ secrets.EC2_KEY }}
+      run: |
+        echo "${{ secrets.EC2_KEY }}" > key.pem
+        chmod 400 key.pem
+        
+        # 서버에서 디렉토리 생성 여부 확인 및 생성
+        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
+          if [ ! -d "/home/ubuntu/aiServer" ]; then
+            mkdir -p /home/ubuntu/aiServer
+          fi
+        EOF
+        
+        # 코드 업로드
+        scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer $EC2_USER@$EC2_HOST:/home/ubuntu/
+        
+        # 사용된 키 삭제
+        rm key.pem
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: upload
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Deploy Code to EC2
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
         EC2_USER: ubuntu
@@ -40,20 +70,10 @@ jobs:
       run: |
         echo "${{ secrets.EC2_KEY }}" > key.pem
         chmod 400 key.pem
-
-        # 서버에서 디렉토리 생성 여부 확인 및 생성
+        
+        # 서버에 접속하여 작업 수행 및 secrets.json 파일 생성
         ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
-          if [ ! -d "/home/ubuntu/aiServer" ]; then
-            mkdir -p /home/ubuntu/aiServer
-          fi
           echo '{"SECRET_KEY": "'"${SECRET}"'"}' > /home/ubuntu/aiServer/secrets.json
-        EOF
-        
-        # 코드 업로드
-        scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer $EC2_USER@$EC2_HOST:/home/ubuntu/
-        
-        # 서버에 접속하여 작업 수행
-        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
           cd /home/ubuntu/aiServer || exit 1
           python3 -m venv venv
           source venv/bin/activate
