--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Create secrets.json
+      uses: jsdaniell/create-json@1.1.2
+      with:
+        name: "secrets.json"
+        json: ${{ secrets.SECRET_JSON }}
+
     - name: Upload Code to EC2
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
@@ -47,8 +53,9 @@ jobs:
           fi
         EOF
         
-        # 코드 업로드
+        # 코드 및 secrets.json 업로드
         scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer $EC2_USER@$EC2_HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i key.pem ./secrets.json $EC2_USER@$EC2_HOST:/home/ubuntu/aiServer/
         
         # 사용된 키 삭제
         rm key.pem
@@ -66,14 +73,12 @@ jobs:
         EC2_HOST: ${{ secrets.EC2_HOST }}
         EC2_USER: ubuntu
         EC2_KEY: ${{ secrets.EC2_KEY }}
-        SECRET: ${{ secrets.SECRETS }}
       run: |
         echo "${{ secrets.EC2_KEY }}" > key.pem
         chmod 400 key.pem
         
-        # 서버에 접속하여 작업 수행 및 secrets.json 파일 생성
+        # 서버에 접속하여 작업 수행
         ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
-          echo '{"SECRET_KEY": "'"${SECRET}"'"}' > /home/ubuntu/aiServer/secrets.json
           cd /home/ubuntu/aiServer || exit 1
           python3 -m venv venv
           source venv/bin/activate
