--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -51,14 +51,17 @@ jobs:
           if [ ! -d "/home/ubuntu/aiServer" ]; then
             mkdir -p /home/ubuntu/aiServer
           fi
+          if [ ! -d "/home/ubuntu/aiServer/logs" ]; then
+            mkdir -p /home/ubuntu/aiServer/logs
+          fi
         EOF
         
         # 코드 및 secrets.json 업로드
         scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer $EC2_USER@$EC2_HOST:/home/ubuntu/
         scp -o StrictHostKeyChecking=no -i key.pem ./secrets.json $EC2_USER@$EC2_HOST:/home/ubuntu/aiServer/
         
-        # 사용된 키 삭제
         rm key.pem
+
   deploy:
     runs-on: ubuntu-latest
     needs: upload
@@ -80,12 +83,17 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
           cd /home/ubuntu/aiServer || exit 1
           if pgrep gunicorn; then pkill gunicorn; fi  # 기존 gunicorn 프로세스 종료
+          
           python3 -m venv venv
           source venv/bin/activate
           python -m pip install --upgrade pip
-          pip install setuptools numpy django-cors-headers django djangorestframework drf-yasg gunicorn
-          nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application &
+          pip install -r requirements.txt
+          
+          nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application \
+            --access-logfile /home/ubuntu/aiServer/logs/gunicorn-access.log \
+            --error-logfile /home/ubuntu/aiServer/logs/gunicorn-error.log &
           sudo service nginx restart
         EOF
+        
         # 사용된 키 삭제
         rm key.pem
