--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -14,6 +14,13 @@ jobs:
         with:
           python-version: '3.10'
       
+      - name: Create secrets.json
+        uses: jsdaniell/create-json@1.1.2
+        with:
+          name: "secrets.json"
+          json: ${{ secrets.SECRETS }}
+          dir: 'aiServer'
+      
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -32,11 +39,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Create secrets.json
+      - name: Create secrets.json for deployment
         uses: jsdaniell/create-json@1.1.2
         with:
           name: "secrets.json"
           json: ${{ secrets.SECRETS }}
+          dir: 'aiServer'
       
       - name: Deploy to EC2
         env:
@@ -48,7 +56,6 @@ jobs:
           chmod 400 key.pem
           
           scp -o StrictHostKeyChecking=no -i key.pem -r ./aiServer $EC2_USER@$EC2_HOST:/home/ubuntu/
-          scp -o StrictHostKeyChecking=no -i key.pem ./secrets.json $EC2_USER@$EC2_HOST:/home/ubuntu/aiServer/
           
           ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
             cd /home/ubuntu/aiServer
