--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: upload
     steps:
-      - name: Deploy Code to EC2
+      - name: Deploy and Verify
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ubuntu
@@ -67,14 +67,16 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
             cd /home/ubuntu/aiServer
             
+            pkill gunicorn || true
+            
             python3 -m venv venv
             source venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
             
-            if pgrep gunicorn; then
-              pkill gunicorn
-            fi
+            python manage.py migrate
+            
+            python manage.py collectstatic --noinput
             
             nohup gunicorn --bind 0.0.0.0:8000 aiServer.wsgi:application \
               --workers 3 \
@@ -83,6 +85,19 @@ jobs:
               --error-logfile logs/gunicorn-error.log &
             
             sudo service nginx restart
+            
+            echo "Checking Gunicorn processes:"
+            ps aux | grep gunicorn
+            
+            echo "Checking Gunicorn logs:"
+            tail -n 20 logs/gunicorn-access.log
+            tail -n 20 logs/gunicorn-error.log
+            
+            echo "Testing service response:"
+            curl -I http://localhost:8000
+            
+            echo "Checking Nginx status:"
+            sudo systemctl status nginx
           EOF
           
           rm key.pem
