--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -16,6 +16,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install django djangorestframework drf-yasg
+        pip install -r requirements.txt
       working-directory: aiServer
 
   upload:
@@ -69,7 +70,10 @@ jobs:
         sudo apt-get install -y python3-apt
         
         python3 -m venv venv
-        source venv/bin/activate
+        if [ ! -d "venv" ]; then
+          python3 -m venv venv
+        fi
+        source venv/bin/activate        
         
         pip install --upgrade pip
         pip install -r requirements.txt
