--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -59,7 +59,6 @@ jobs:
         echo "${{ secrets.EC2_KEY }}" > key.pem
         chmod 400 key.pem
         ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
-
         pkill -9 gunicorn || true
         
         sudo apt update
@@ -69,12 +68,13 @@ jobs:
         
         sudo apt-get install -y python3-apt
         
+        # 프로젝트 디렉토리로 이동
+        cd /home/ubuntu/aiServer
+  
+        # 가상환경 설정 및 실행
         python3 -m venv venv
-        if [ ! -d "venv" ]; then
-          python3 -m venv venv
-        fi
         source venv/bin/activate        
-        
+          
         pip install --upgrade pip
         pip install -r requirements.txt
         
@@ -100,6 +100,10 @@ jobs:
         echo "Testing service response:"
         curl -I http://localhost:8000
         
+        echo "Checking Nginx status:"
+        sudo systemctl status nginx
+        EOF
+        rm key.pem
         echo "Checking Nginx status:"
         sudo systemctl status nginx
         EOF
