--- a/.github/workflows/django_CICD.yml
+++ b/.github/workflows/django_CICD.yml
@@ -77,7 +77,8 @@ jobs:
           
         pip install --upgrade pip
         pip install -r requirements.txt
-        
+
+        python manage.py makemigrations
         python manage.py migrate
         python manage.py collectstatic --noinput
         
